Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,7 @@ wp-content/*
 !wp-content/mu-plugins/
 !wp-content/plugins/
 !wp-content/themes/
+wp-config.php
 
 # ignore these plugins
 wp-content/plugins/hello.php
